2010-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	Use SMIE's blink-paren for octave-mode.
	* progmodes/octave-mod.el (octave-font-lock-close-quotes):
	Backslashes do not escape single-quotes, single-quotes do.
	(octave-block-else-regexp, octave-block-end-regexp)
	(octave-block-match-alist): Remove.
	(octave-smie-bnf-table): New var, with old content.
	(octave-smie-op-levels): Use it.
	(octave-smie-closer-alist): New var.
	(octave-mode): Use it.  Setup smie-blink-matching and electric-indent.
	(octave-blink-matching-block-open): Remove.
	(octave-reindent-then-newline-and-indent, octave-electric-semi)
	(octave-electric-space): Let self-insert-command run expand-abbrev and
	blink parens.

	* electric.el (electricity): New group.
	(electric-indent-chars): New var.
	(electric-indent-post-self-insert-function): New fun.
	(electric-indent-mode): New minor mode.
	(electric-pair-skip-self): New custom.
	(electric-pair-post-self-insert-function): New function.
	(electric-pair-mode): New minor mode.

	* calc/calc-aent.el (calcAlg-blink-matching-check): New fun, to replace
	calcAlg-blink-matching-open.
	(calc-alg-ent-map, calc-alg-ent-esc-map): Initialize in the declaration.
	(calc-do-alg-entry): Only touch the part of the keymap that varies.
	Use the new blink-matching-check-function.

	Provide blink-matching support to SMIE.
	* emacs-lisp/smie.el (smie-bnf-closer-alist): New function.
	(smie-blink-matching-triggers, smie-blink-matching-inners): New vars.
	(smie-blink-matching-check, smie-blink-matching-open): New functions.

	* simple.el (newline): Fix last change to properly remove itself from
	the hook.

2010-09-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (newline): Eliminate optimization.
	Use post-self-insert-hook to set hard-newline and things before
	running post-self-insert-hook.
	(blink-matching-check-mismatch): New function.
	(blink-matching-check-function): New variable.
	(blink-matching-open): Use them.